canal-on-k8s/canal-admin.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: canal-admin
  namespace: middleware
  labels:
    app.kubernetes.io/name: canal-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: canal-admin
  template:
    metadata:
      name: canal-admin
      labels:
        app.kubernetes.io/name: canal-admin
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: app
                operator: In
                values:
                - canal
      containers:
        - name: canal-admin
          image: 'harbor.xxx.net.cn/library/canal-admin:v1.1.7'
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 8089
              protocol: TCP
      restartPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: canal-admin
  namespace: middleware
spec:
  ports:
    - protocol: TCP
      port: 8089
      targetPort: 8089
  selector:
    app.kubernetes.io/name: canal-admin
---
