canal-on-k8s/canal-server.yaml
---

kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: canal-server
  namespace: middleware
  labels:
    app.kubernetes.io/name: canal-server
    app: canal-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: canal-server
      app: canal-server
  template:
    metadata:
      name: canal-server
      labels:
        app.kubernetes.io/name: canal-server
        app: canal-server
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: app
                operator: In
                values:
                - canal
      containers:
        - name: canal-server
          image: 'harbor.xxx.net.cn/library/canal-server:v1.1.7'
          imagePullPolicy: IfNotPresent
          ports:
            - name: tcp
              containerPort: 11111
              protocol: TCP
      restartPolicy: Always
  serviceName: canal-server
  revisionHistoryLimit: 10

---

kind: Service
apiVersion: v1
metadata:
  name: canal-server
  namespace: middleware
spec:
  ports:
    - protocol: TCP
      port: 11110
      targetPort: 11110
  type: ClusterIP
  selector:
    app.kubernetes.io/name: canal-server
    app: canal-server
